# esp32s3-emg-imu-interface

./: .gitignore  openocd_esp32s3.cfg  troubleshooting_commands.txt
main/: CMakeLists.txt  Kconfig.projbuild  esp_hid_device_main.c
